[gd_scene load_steps=12 format=3 uid="uid://dwdqhxu8ubagf"]

[ext_resource type="Script" path="res://Scripts/Bullet/bullet_2.gd" id="1_mxhoa"]
[ext_resource type="Texture2D" uid="uid://bi8km0qk7ud3q" path="res://ART Assets/bullet/enemy/m2_Projectile.png" id="2_j8jqv"]

[sub_resource type="AtlasTexture" id="AtlasTexture_njgw2"]
atlas = ExtResource("2_j8jqv")
region = Rect2(0, 0, 64, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_a2gsf"]
atlas = ExtResource("2_j8jqv")
region = Rect2(64, 0, 64, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_5xc1g"]
atlas = ExtResource("2_j8jqv")
region = Rect2(128, 0, 64, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_uxajb"]
atlas = ExtResource("2_j8jqv")
region = Rect2(192, 0, 64, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_ujtwg"]
atlas = ExtResource("2_j8jqv")
region = Rect2(256, 0, 64, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_ts14x"]
atlas = ExtResource("2_j8jqv")
region = Rect2(320, 0, 64, 34)

[sub_resource type="SpriteFrames" id="SpriteFrames_u10r5"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_njgw2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a2gsf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5xc1g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uxajb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ujtwg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ts14x")
}],
"loop": true,
"name": &"shoot",
"speed": 8.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ekmi8"]
radius = 19.1882
height = 38.3765

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_akmr7"]
radius = 17.1874
height = 130.555

[node name="Bullet1" type="CharacterBody2D"]
scale = Vector2(0.440001, 0.359999)
collision_layer = 8
collision_mask = 0
script = ExtResource("1_mxhoa")
BulletType = 0

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
rotation = 3.14159
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_u10r5")
animation = &"shoot"
frame_progress = 0.469673

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1.90735e-06, 0)
scale = Vector2(-1.81326, -1.15812)
shape = SubResource("CapsuleShape2D_ekmi8")

[node name="Detector" type="Area2D" parent="."]
collision_layer = 3
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="Detector"]
scale = Vector2(1.45455, 0.340427)
shape = SubResource("CapsuleShape2D_akmr7")

[connection signal="body_entered" from="Detector" to="." method="_on_detector_body_entered"]
