[gd_scene load_steps=10 format=3 uid="uid://cicweg071xjvc"]

[ext_resource type="Script" path="res://Scripts/Bullet/bullet_2.gd" id="1_7ss2j"]
[ext_resource type="Texture2D" uid="uid://kvj1hx6bd7ui" path="res://ART Assets/bullet/enemy/m11_Projectile.png" id="2_tgmt6"]

[sub_resource type="AtlasTexture" id="AtlasTexture_pyrvd"]
atlas = ExtResource("2_tgmt6")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_yunwv"]
atlas = ExtResource("2_tgmt6")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6akws"]
atlas = ExtResource("2_tgmt6")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_i2kkv"]
atlas = ExtResource("2_tgmt6")
region = Rect2(96, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_epgpq"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_pyrvd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yunwv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6akws")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i2kkv")
}],
"loop": true,
"name": &"shoot",
"speed": 8.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_0tgwo"]
radius = 71.4569

[sub_resource type="CircleShape2D" id="CircleShape2D_dh0lt"]
radius = 10.4812

[node name="Bullet2" type="CharacterBody2D"]
scale = Vector2(0.440001, 0.359999)
collision_layer = 8
collision_mask = 0
script = ExtResource("1_7ss2j")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(-11.3636, -2.77779)
rotation = 3.14159
scale = Vector2(4.11113, 4.11113)
sprite_frames = SubResource("SpriteFrames_epgpq")
animation = &"shoot"
frame_progress = 0.15467

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2(0.573568, 0.636996)
shape = SubResource("CircleShape2D_0tgwo")

[node name="Detector" type="Area2D" parent="."]
collision_layer = 3
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="Detector"]
position = Vector2(1.13687e-13, 0)
scale = Vector2(3.45454, 3.55556)
shape = SubResource("CircleShape2D_dh0lt")

[connection signal="body_entered" from="Detector" to="." method="_on_detector_body_entered"]
